objects/App_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>AppId__c</fullName>
        <displayFormat>{0}</displayFormat>
        <externalId>true</externalId>
        <label>AppId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Back_page__c</fullName>
        <label>Back page</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_External_Start_Url__c</fullName>
        <label>External_Start_Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Internal_URL__c</fullName>
        <formula>Internal_Redirect_URL__c+ Internal_Employee_link__c+ Internal_Redirect_URL2__c</formula>
        <label>CMI Internal URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_text__c</fullName>
        <label>Footer text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_App_Protected_By__c</fullName>
        <label>App Protected By</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAML</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                </value>
                <value>
                    <fullName>OAM11g</fullName>
                </value>
                <value>
                    <fullName>OAM12c</fullName>
                </value>
                <value>
                    <fullName>AWS Cognito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Application_Name__c</fullName>
        <formula>CASE( Name , &quot;Repair Logistics Support&quot;,$Label.IDM_RLS_AppName,&quot;Identity Management&quot;,$Label.IDM_Submit_Button ,$Label.IDM_OnlineLogin_AppName)</formula>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Approval_Needed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Approval Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Approver_Email_Account_Feature_Field__c</fullName>
        <label>Approver Email Account Feature Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Approver_Email_Contact_Field__c</fullName>
        <label>Approver Email Contact Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Approver_Email_Group__c</fullName>
        <label>Approver Email or Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Authroization_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authroization Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Community_Domain_For_IAM_APP__c</fullName>
        <formula>$Label.IDM_Domain</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Domain For IAM APP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Connected_App_ID__c</fullName>
        <description>field to store the connected app ID Present in SF</description>
        <label>Connected App ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Connected_Target_Instance__c</fullName>
        <label>Connected Target Instance</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Default_Approver__c</fullName>
        <label>Default Approver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Default_Role__c</fullName>
        <label>Default Role</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAM_Default_Text__c</fullName>
        <label>IAM_Default_Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAM_Default_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IAM_Default_Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Default__c</fullName>
        <label>IAM_Default_Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAM_Different_Request_Access_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to check if applications redirection URL is IAM_Request_Access_Page</description>
        <label>Different Request Access URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_IDP_Initiated_URL__c</fullName>
        <description>this field gives the IDP intiated URL when my.salesforce.com as issuer in connected app settings</description>
        <inlineHelpText>this field gives the IDP intiated URL when my.salesforce.com as issuer in connected app settings</inlineHelpText>
        <label>IDP Initiated URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Is_Federated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Federated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Login_Initiation__c</fullName>
        <label>Login Initiation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SP-Initiated</fullName>
                </value>
                <value>
                    <fullName>IDP-Initiated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Logout_URL__c</fullName>
        <formula>&quot;https://mylogin.cummins.com/web/IAM_logout&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logout URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_OAM_Resource_URL_Redirection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is define if we need to add  resource url getting from OAM to cummins redirect page.</description>
        <label>OAM Resource URL Redirection Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_OAM_Resource_URL__c</fullName>
        <description>Field to store the resource URL that is coming from OAM</description>
        <label>OAM Resource URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_OSM_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IAM OSM Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Paid_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Partner_SSO_Unique_Text__c</fullName>
        <description>Field used for storing the value of the unique text that partner users should enter when they want to redirect user to partner login url</description>
        <label>Partner SSO Unique Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Registration_Type__c</fullName>
        <label>Registration Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Registration__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>My Fleetgaurd Fit</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_RelayState__c</fullName>
        <formula>&quot;/web/IAM_Authorize?appid=&quot;+Id</formula>
        <label>Relay State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Request_Access_URL__c</fullName>
        <defaultValue>$Label.IAM_Request_Access_Page_URL</defaultValue>
        <description>This field consists of the request access page URL</description>
        <label>Request Access URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Request_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request_Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_SSO_Configuration_ID__c</fullName>
        <description>This field is used to setup the Developer Name of the Single Sign On configuration used for Federation with partner</description>
        <label>SSO Configuration ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Separate_Community_Login__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Separate Community Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Show_Language_option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Language option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Skip_Contact_Type_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to determine if we need to skip the contact type validation</description>
        <label>Skip Contact Type Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_approver_queue_name__c</fullName>
        <label>Approver Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDM_Application_Name__c</fullName>
        <formula>CASE( Name , &quot;Repair Logistics Support&quot;,$Label.IDM_RLS_AppName,&quot;Identity Management&quot;,$Label.IDM_Submit_Button ,$Label.IDM_OnlineLogin_AppName)</formula>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Employee_link__c</fullName>
        <label>Internal Employee link</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Redirect_URL2__c</fullName>
        <label>Internal Redirect URL2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Redirect_URL__c</fullName>
        <defaultValue>&quot;http://access-lab-dev.cummins.com/RC_OnlineLogin/cummins/cola/logindisplay.jsp?strtarget=&quot;</defaultValue>
        <label>Internal Redirect URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Url__c</fullName>
        <label>Login Url</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTP_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OTP Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Link__c</fullName>
        <formula>IF( Name==&apos;Cummins India ABO&apos; ,&quot;https://mylogin.cummins.com/web/ABO_User_Reg&quot;, IF( INCLUDES(IAM_Registration_Type__c, &quot;Basic&quot;),$Label.IDM_Domain+&quot;/IAM_Basic_Registration?appid=&quot;+Id,IF(INCLUDES(IAM_Registration_Type__c, &quot;My Fleetgaurd Fit&quot;),&quot;https://www.myfleetguard.com/ccrz__CCSiteRegister &quot;,$Label.IDM_Domain+&quot;/IAM_NewRegistration?appid=&quot;+Id)))</formula>
        <label>Registration Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Mobile__c</fullName>
        <label>Registration_Mobile</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>contact_email__c</fullName>
        <label>contact email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>forgot_password__c</fullName>
        <formula>IF(INCLUDES(IAM_Registration_Type__c, &quot;My Fleetgaurd Fit&quot;),&quot;https://mylogin.cummins.com/Fleetguard/IAM_forgotpassword?appid=&quot;+ Id+&quot;&amp;lang=&quot;,
$Label.IDM_Domain+&quot;/IAM_forgotpassword?appid=&quot;+ Id+&quot;&amp;lang=&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>forgot password</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>internal_Employee_Redirection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>internal Employee Redirection</label>
        <type>Checkbox</type>
    </fields>
    <label>App Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>contact_email__c</columns>
        <columns>Footer_text__c</columns>
        <columns>Back_page__c</columns>
        <columns>Internal_Employee_link__c</columns>
        <columns>Registration__c</columns>
        <columns>CMI_External_Start_Url__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>App Mapping  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Default_role_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISNULL(IAM_Default_Role__c),ISBLANK(IAM_Default_Role__c))</errorConditionFormula>
        <errorDisplayField>IAM_Default_Role__c</errorDisplayField>
        <errorMessage>You must enter value</errorMessage>
    </validationRules>
</CustomObject>